--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="../css-common/shapes.css" rel="stylesheet">
-    <link href="../css-common/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/shapes.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <script src="../js-common/jquery-2.1.4.min.js"></script>
-    <script src="../js-common/bootstrap.min.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!--    for SVD and matrix operations-->
     <script src="js/numeric-1.2.6.min.js"></script>
@@ -17,7 +17,7 @@
     <script src="js/nerdamer/Solve.js"></script>
     
     <!-- Load the Paper.js library -->
-    <script type="text/javascript" src="/js-common/paper.js"></script>
+    <script type="text/javascript" src="/js/paper.js"></script>
 	
     <!-- Define inlined PaperScript associate it with myCanvas -->
 	<script type="text/paperscript" src="js/partitioning.js" canvas="myCanvas">
