--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="js/nerdamer/Solve.js"></script>
     
     <!-- Load the Paper.js library -->
-    <script type="text/javascript" src="/js/paper.js"></script>
+    <script type="text/javascript" src="js/paper.js"></script>
 	
     <!-- Define inlined PaperScript associate it with myCanvas -->
 	<script type="text/paperscript" src="js/partitioning.js" canvas="myCanvas">
