--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- Define inlined PaperScript associate it with myCanvas -->
 	<script type="text/paperscript" src="js/partitioning.js" canvas="myCanvas">
 	</script>
+
+    <title> Polygon Partitioning </title>
 </head>
 <body>
     
